<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern"
    tools:context="com.example.rakesh.saipalchatapp.Setting">
    <include
        android:id="@+id/toolbar_setting"
        layout="@layout/toolbarlayout"
         />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/conslay_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting">

        <de.hdodenhof.circleimageview.CircleImageView
            android:clickable="true"
            android:id="@+id/profile_img"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/default_user_icon_round"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="218dp"
            android:layout_height="29dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="user name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_img" />

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/status"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_username" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="383dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conslay_profile">

        <TextView
            android:textStyle=""
            android:id="@+id/txt_profilesetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/profilesetting"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"/>

        <View
            android:id="@+id/horline_pr"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/background_pattern"
            app:layout_constraintTop_toBottomOf="@+id/txt_profilesetting" />

        <TextView
            android:clickable="true"
            android:id="@+id/txt_Accountssetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/Accountsetting"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_profilesetting" />
        <View
            android:id="@+id/horline_acc"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/background_pattern"
            app:layout_constraintTop_toBottomOf="@+id/txt_Accountssetting" />

        <TextView
            android:clickable="true"
            android:id="@+id/txt_privacysetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/privacysetting"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Accountssetting" />
        <View
            android:id="@+id/horline_priv"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/background_pattern"
            app:layout_constraintTop_toBottomOf="@+id/txt_privacysetting" />

        <TextView
            android:clickable="true"
            android:id="@+id/txt_Generalsetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/generalsetting"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.088"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_privacysetting" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
